# makemore-rs

./: .gitmodules  Cargo.toml
examples/: bigrams.rs  bigrams_logprob.rs  bigrams_probabilities.rs  bigrams_sample.rs  bigrams_tensor.rs  broadcasting_semantics.rs  example1.rs  heatmap.rs  initial_probabilities.rs  softmax_probs.rs  tensor_basics.rs
src/: bigrams.rs  data.rs  lib.rs  main.rs  plot.rs  utils.rs  vocabulary.rs
